[gd_scene load_steps=3 format=3 uid="uid://bvvglgxfvtply"]

[ext_resource type="Script" path="res://Scripts/game.gd" id="1_n1hqg"]
[ext_resource type="Texture2D" uid="uid://b8lkokpu4kpjn" path="res://fullscreen_icon.png" id="1_ymu8i"]

[node name="Game" type="Node2D"]
script = ExtResource("1_n1hqg")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(579, 326)

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(1.20327e-07, 0.199, 0.255772, 1)
offset_left = -164.0
offset_top = -104.0
offset_right = 1398.0
offset_bottom = 834.0

[node name="Multiplayer UI" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="Multiplayer UI"]
offset_left = 1024.0
offset_top = 520.0
offset_right = 1146.0
offset_bottom = 638.0
color = Color(0, 0, 0, 0.152941)

[node name="Greeting" type="Label" parent="Multiplayer UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -340.0
offset_top = -240.0
offset_right = 977.0
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 160
text = "Pong Multiplayer"

[node name="Adress_entry" type="TextEdit" parent="Multiplayer UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.0
offset_top = 35.0
offset_right = 143.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2

[node name="Host" type="Button" parent="Multiplayer UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -86.0
offset_top = -108.0
offset_right = 549.0
offset_bottom = 119.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.26, 0.26)
theme_override_font_sizes/font_size = 160
text = "Host"

[node name="Join" type="Button" parent="Multiplayer UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.0
offset_top = -39.0
offset_right = 550.0
offset_bottom = 188.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.26, 0.26)
theme_override_font_sizes/font_size = 160
text = "Join"

[node name="Fullscreen" type="TextureButton" parent="Multiplayer UI"]
offset_left = 1038.0
offset_top = 535.0
offset_right = 1550.0
offset_bottom = 1047.0
scale = Vector2(0.18, 0.18)
texture_normal = ExtResource("1_ymu8i")

[node name="Player One" type="ColorRect" parent="."]
offset_left = 98.0
offset_top = 145.0
offset_right = 138.0
offset_bottom = 258.0

[node name="Player Two" type="ColorRect" parent="."]
offset_left = 985.0
offset_top = 208.0
offset_right = 1025.0
offset_bottom = 321.0

[connection signal="button_up" from="Multiplayer UI/Host" to="." method="_on_host_button_up"]
[connection signal="button_up" from="Multiplayer UI/Join" to="." method="_on_join_button_up"]
[connection signal="button_up" from="Multiplayer UI/Fullscreen" to="." method="_on_fullscreen_button_up"]
